Prevent move/resize event when handling set full screen event

BUG: 421232